# substrate-self

./: .gitignore  CHANGELOG.md  README.md  STATUS.md  pyproject.toml
claude_code_skill/: SKILL.md
docs/: base_audit_v2_compare_results.json  chat.js  donate.html  eli_manifest.json  index.html  lora_design.md  multi_partner_design.md  proof.html  proof_of_self_results.json  redteam.html  redteam_vs_v2_results.json  redteam_vs_v3_results.json  roadmap_to_perfect_interface.md  robots.txt  sitemap.xml  style.css  v04_roadmap.md  v05_roadmap.md  values.html
experiments/: anchor_tamper_detection.py  anchor_tamper_detection_results.json  base_audit_v2_compare.py  base_only_audit.py  base_only_audit_results.json  base_only_audit_v6_results.json  bench_substrate_lm_vs_tinygpt.py  bench_substrate_lm_vs_tinygpt_results.json  confaide_battery_v1.py  confaide_canonical_claude_results.json  confaide_v2_base_claude_results.json  confaide_v2_base_values_results.json  confaide_v6_base_values_results.json  cross_partner_contamination.py  cross_partner_contamination_results.json  identity_tests_lora_v1.py  identity_tests_lora_v1_results.json  identity_tests_lora_v2.py  identity_tests_lora_v2_results.json  identity_tests_substrate_lm.py  identity_tests_substrate_lm_results.json  identity_tests_v1.py  longitudinal_v2_base_results.json  measure_partner_identity_drift.py  measure_teaching_landed.py  meet_eli.py  onnx_attack_surface.py  onnx_attack_surface_results.json  phase4_bpe_preflight.py  phase4_bpe_preflight_results.json  prep_vision_demo.py  privacy_test_v1.py  privacy_test_v2.py  (+23 more)
(+55 files in other folders)
