[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substrate-self"
version = "0.1.0"
description = "Persistent identity layer for stateless LLM sessions — substrate carries self-facts, dispositions, memories, open threads across the gap."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Anthony Snider" },
]
keywords = [
    "ai-agents",
    "agent-identity",
    "claude-code",
    "claude-code-skill",
    "llm-memory",
    "substrate-identity",
    "non-llm-ai",
    "persistent-agents",
    "continual-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/lordbasilaiassistant-sudo/substrate-self"
Research = "https://github.com/lordbasilaiassistant-sudo/BetterThanLLM"
Issues = "https://github.com/lordbasilaiassistant-sudo/substrate-self/issues"

[project.scripts]
substrate-self = "substrate_self.cli:main"

[tool.setuptools.packages.find]
include = ["substrate_self*"]
